--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -86,7 +86,7 @@ phone = "888 888 88 88"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {building = "The David Attenborough Building", street = "Pembroke Street", city = "Cambridge", region = "CA", postcode = "CB2 3QZ", country = "United Kingdom", country_code = "UK"}
+address = {street = "The David Attenborough Building, Pembroke Street", city = "Cambridge", region = "CA", postcode = "CB2 3QZ", country = "United Kingdom", country_code = "UK"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
@@ -261,7 +261,7 @@ plugins_js  = []
   #   3: OpenStreetMap (Mapbox)
   engine = 2
   api_key = ""
-  zoom = 15
+  zoom = 17
 
 ############################
 ## Marketing
